<resources>
    <string name="app_name">Quiz App</string>
    <string name="holder1">Q1) Which of the following is not a type of view? </string>
    <string name="holder2">Q2) What is the meaning of HTML?  </string>
    <string name="holder3">Q3) What is the meaning of CSS? </string>
    <string name="holder4">Q4) What is the meaning of XML </string>
    <string name="holder5">Q5) The following are HTML tags except?   </string>
    <string name="holder6">Q6) The following are ways to insert CSS except?  </string>
    <string name="holder7">Q7) Which of the following can be used to build websites?  </string>
    <string name="holder8">Q8) What is the name of the language below called?  </string>
    <string name="check"> View your Score </string>
    <string name="article"> HTML article tag </string>
    <string name="q1rb1"> CardView </string>
    <string name="q1rb2"> TextView </string>
    <string name="q1rb3"> PictureView </string>
    <string name="q1rb4">ImageView</string>
    <string name="q2rb1">Hypertext marked language</string>
    <string name="q2rb2">Extended Markup Language</string>
    <string name="q2rb3">Hypertext Markup Language</string>
    <string name="q2rb4">Hypervision Markup Language</string>
    <string name="q3rb1">Casket Class Styling</string>
    <string name="q3rb2">Constructed Style Sheet</string>
    <string name="q3rb3">Cascade Style Sheet</string>
    <string name="q3rb4">Cascading Style Sheet</string>
    <string name="q4rb1">Extensible Markup Language</string>
    <string name="q4rb2">Extensively Marked Language</string>
    <string name="q4rb3">Extension Markup Language</string>
    <string name="q4rb4">Extended Language</string>
    <string name="q5rb1">HTML Head tag</string>
    <string name="q5rb2">HTML Body tag</string>
    <string name="q5rb3">HTML Leg tag</string>
    <string name="q5rb4">HTML Footer tag</string>
    <string name="q6rb1">Inline Style</string>
    <string name="q6rb2">Updown Style</string>
    <string name="q6rb3">External Style Sheet</string>
    <string name="q6rb4">Internal Style Sheet</string>
    <string name="chk1">HTML</string>
    <string name="chk2">CSS</string>
    <string name="chk3">JavaScript</string>
    <string name="chk4">QBasic</string>
    <string name="txthint">Enter your answer here</string>
</resources>
